--- a/resources/assets/sass/components/base.scss
+++ b/resources/assets/sass/components/base.scss
@@ -3,6 +3,10 @@ body, .container {
   @include font-base;
   margin-bottom: 60px;
   margin-top: 60px;
+
+  h1, h2, h3 {
+    color: #000000;
+  }
 }
 
 
