--- a/resources/assets/sass/components/filter.scss
+++ b/resources/assets/sass/components/filter.scss
@@ -89,6 +89,7 @@
   &.hide {
     display: none;
   }
+
   a:hover{
     text-decoration: none;
     color: $w-boulder;
@@ -108,6 +109,10 @@
 
   &.hide {
     display: none;
+  }
+
+  a {
+    padding: 1px;
   }
 }
 
